--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures{
+        dataBinding = true
+    }
+
+//
+//    dataBinding{
+//        enabled true;
+//    }
 }
 
 dependencies {
@@ -39,5 +48,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
 
+    //added by avinash for floating button actoins.
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:23.1.1'
+
+
 
 }
+
